--- a/composer.json
+++ b/composer.json
@@ -12,25 +12,13 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "cakephp/cakephp": "~3.1",
-        "league/fractal": "^0.13.0@dev"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "*",
-        "friendsofcake/cakephp-test-utilities": "dev-master",
-        "cakephp/cakephp-codesniffer": "dev-master",
-        "satooshi/php-coveralls": "dev-master"
+        "php": ">=7.0",
+        "cakephp/cakephp": "^3.6",
+        "league/fractal": ">=0.13.0"
     },
     "autoload": {
         "psr-4": {
             "FractalTransformerView\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "FractalTransformerView\\Test\\": "tests",
-            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
     }
 }
