--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         },
         {
             "name": "Jefferson Simão Gonçalves",
-            "homepage": "https://github.com/jeffersonsimaogoncalves",
-            "role": "Author"
+            "homepage": "https://github.com/jeffersonsimaogoncalves"
         }
     ],
     "require": {
