--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "cakephp/cakephp": "^3.6",
+        "php": "^7.2",
+        "cakephp/cakephp": "^4.0",
         "league/fractal": ">=0.13.0"
     },
     "autoload": {
